[gd_scene load_steps=28 format=3 uid="uid://cq1ggva34bng6"]

[ext_resource type="Texture2D" uid="uid://j68ne0sambux" path="res://Sprites/05-Pig Thowing a Bomb/Idle (26x26).png" id="1_4vv2u"]
[ext_resource type="Script" path="res://scenes/enemy_with_bomb.gd" id="1_6g0es"]
[ext_resource type="PackedScene" uid="uid://cml2ylqmultpj" path="res://scenes/bomb.tscn" id="2_bp7rk"]
[ext_resource type="Texture2D" uid="uid://c4cae2br6f60j" path="res://Sprites/03-Pig/Dead (34x28).png" id="2_qcatc"]
[ext_resource type="Texture2D" uid="uid://um32uh0fm1js" path="res://Sprites/05-Pig Thowing a Bomb/Throwing Boom (26x26).png" id="4_sp2ve"]

[sub_resource type="AtlasTexture" id="AtlasTexture_3up5i"]
atlas = ExtResource("2_qcatc")
region = Rect2(0, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_huw17"]
atlas = ExtResource("2_qcatc")
region = Rect2(34, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_bicll"]
atlas = ExtResource("2_qcatc")
region = Rect2(68, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_c8f76"]
atlas = ExtResource("2_qcatc")
region = Rect2(102, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_f5ce5"]
atlas = ExtResource("1_4vv2u")
region = Rect2(0, 0, 26, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_2iass"]
atlas = ExtResource("1_4vv2u")
region = Rect2(26, 0, 26, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_g70vp"]
atlas = ExtResource("1_4vv2u")
region = Rect2(52, 0, 26, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_sjyam"]
atlas = ExtResource("1_4vv2u")
region = Rect2(78, 0, 26, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_2tbhq"]
atlas = ExtResource("1_4vv2u")
region = Rect2(104, 0, 26, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_y5n05"]
atlas = ExtResource("1_4vv2u")
region = Rect2(130, 0, 26, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_t7fgs"]
atlas = ExtResource("1_4vv2u")
region = Rect2(156, 0, 26, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_wcid3"]
atlas = ExtResource("1_4vv2u")
region = Rect2(182, 0, 26, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_kgein"]
atlas = ExtResource("1_4vv2u")
region = Rect2(208, 0, 26, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ropb"]
atlas = ExtResource("1_4vv2u")
region = Rect2(234, 0, 26, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_0d0my"]
atlas = ExtResource("4_sp2ve")
region = Rect2(0, 0, 26, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_mo8ih"]
atlas = ExtResource("4_sp2ve")
region = Rect2(26, 0, 26, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_534e0"]
atlas = ExtResource("4_sp2ve")
region = Rect2(52, 0, 26, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_4cija"]
atlas = ExtResource("4_sp2ve")
region = Rect2(78, 0, 26, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_abmp1"]
atlas = ExtResource("4_sp2ve")
region = Rect2(104, 0, 26, 26)

[sub_resource type="SpriteFrames" id="SpriteFrames_cjhmv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3up5i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_huw17")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bicll")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c8f76")
}],
"loop": false,
"name": &"die",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f5ce5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2iass")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g70vp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sjyam")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2tbhq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y5n05")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t7fgs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wcid3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kgein")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ropb")
}],
"loop": false,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0d0my")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mo8ih")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_534e0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4cija")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_abmp1")
}],
"loop": false,
"name": &"throw_bomb",
"speed": 30.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5k5ei"]
size = Vector2(14, 15)

[sub_resource type="CircleShape2D" id="CircleShape2D_1gdcs"]
radius = 73.0

[node name="enemy_with_bomb" type="CharacterBody2D" groups=["enemies"]]
texture_filter = 1
script = ExtResource("1_6g0es")
projectile = ExtResource("2_bp7rk")

[node name="anim" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_cjhmv")
animation = &"throw_bomb"

[node name="collision" type="CollisionShape2D" parent="."]
position = Vector2(-2, 5.5)
shape = SubResource("RectangleShape2D_5k5ei")

[node name="detecting" type="Area2D" parent="."]

[node name="collision" type="CollisionShape2D" parent="detecting"]
position = Vector2(-3, 8)
shape = SubResource("CircleShape2D_1gdcs")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="animation_finished" from="anim" to="." method="_on_anim_animation_finished"]
[connection signal="body_entered" from="detecting" to="." method="_on_detecting_body_entered"]
[connection signal="body_exited" from="detecting" to="." method="_on_detecting_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
